force-app/main/default/objects/ProviderReInvoiceItem__c/ProviderReInvoiceItem__c.object-meta.xml
<CustomObject>
    <label>Élément de refacturation</label>
    <nameField>
        <displayFormat>PINV/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Éléments de refacturation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>