force-app/main/default/objects/ProviderReInvoiceItem__c/fields/demandedAmount__c.field-meta.xml
<CustomField>
    <fullName>demandedAmount__c</fullName>
    <label>Montant demandé</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>