force-app/main/default/objects/ProviderReInvoiceItem__c/fields/demandedDate__c.field-meta.xml
<CustomField>
    <fullName>demandedDate__c</fullName>
    <formula>DATEVALUE(providerProductNonCompliance__r.CreatedDate)</formula>
    <label>Date de demande</label>
    <type>Date</type>
</CustomField>