force-app/main/default/objects/ProviderReInvoiceItem__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>