force-app/main/default/objects/ProviderReInvoiceItem__c/fields/invoicedAmount__c.field-meta.xml
<CustomField>
    <fullName>invoicedAmount__c</fullName>
    <label>Montant facturé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>