force-app/main/default/objects/ProviderReInvoiceItem__c/fields/invoicedDate__c.field-meta.xml
<CustomField>
    <fullName>invoicedDate__c</fullName>
    <formula>providerProductNonCompliance__r.invoicedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de facturation</label>
    <type>Date</type>
</CustomField>