force-app/main/default/objects/ProviderReInvoiceItem__c/fields/negociatedAmount__c.field-meta.xml
<CustomField>
    <fullName>negociatedAmount__c</fullName>
    <label>Montant négocié</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>