force-app/main/default/objects/ProviderReInvoiceItem__c/fields/negociatedDate__c.field-meta.xml
<CustomField>
    <fullName>negociatedDate__c</fullName>
    <formula>providerProductNonCompliance__r.negociatedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de négociation</label>
    <type>Date</type>
</CustomField>