force-app/main/default/objects/ProviderReInvoiceItem__c/fields/proposedAmount__c.field-meta.xml
<CustomField>
    <fullName>proposedAmount__c</fullName>
    <label>Montant proposé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>