force-app/main/default/objects/ProviderReInvoiceItem__c/fields/proposedDate__c.field-meta.xml
<CustomField>
    <fullName>proposedDate__c</fullName>
    <formula>providerProductNonCompliance__r.proposedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de proposition</label>
    <type>Date</type>
</CustomField>