force-app/main/default/objects/ProviderReInvoiceItem__c/fields/providerProductNonCompliance__c.field-meta.xml
<CustomField>
    <fullName>providerProductNonCompliance__c</fullName>
    <label>Non-conformité produit / Fournisseur</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ProviderProductNonCompliance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipName>ProviderProductNonComplianceItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>