force-app/main/default/objects/ProviderReInvoiceItem__c/fields/receivedAmount__c.field-meta.xml
<CustomField>
    <fullName>receivedAmount__c</fullName>
    <label>Montant reçu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>