force-app/main/default/objects/ProviderReInvoiceItem__c/fields/receivedDate__c.field-meta.xml
<CustomField>
    <fullName>receivedDate__c</fullName>
    <formula>providerProductNonCompliance__r.receivedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de réception</label>
    <type>Date</type>
</CustomField>