force-app/main/default/objects/ProviderReInvoiceItem__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProviderProductNonComplianceItemType</valueSetName>
    </valueSet>
</CustomField>