force-app/main/default/objects/ProviderReInvoiceItem__c/fields/unit__c.field-meta.xml
<CustomField>
    <fullName>unit__c</fullName>
    <formula>IF(ISPICKVAL(type__c, &quot;Déplacement&quot;), &quot;km&quot;, 
   IF(ISPICKVAL(type__c, &quot;Main d&apos;oeuvre&quot;), &quot;heures&quot;, 
      IF(ISPICKVAL(type__c, &quot;Produit&quot;), &quot;unité&quot;, &quot;&quot;)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unité</label>
    <type>Text</type>
</CustomField>