force-app/main/default/objects/ProviderReInvoiceItem__c/validationRules/VR_K3_PNC_DemandedAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_PNC_DemandedAmount</fullName>
    <active>true</active>
    <description>Montant obligatoire et strictement supérieure à 0</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
demandedAmount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>demandedAmount__c</errorDisplayField>
    <errorMessage>Montant demandé invalide (doit être renseigné et strictement supérieure à 0)!</errorMessage>
</ValidationRule>