force-app/main/default/objects/ProviderReInvoiceItem__c/validationRules/VR_K3_PNC_ProposedAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_PNC_ProposedAmount</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
proposedAmount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>proposedAmount__c</errorDisplayField>
    <errorMessage>Montant proposé invalide (doit être renseigné et strictement supérieure à 0)!</errorMessage>
</ValidationRule>